--- a/venta/templates/venta/product-list.html
+++ b/venta/templates/venta/product-list.html
@@ -171,9 +171,8 @@
 
                         <div class="col-md-4">
                             <div class="product-item">
-                                {% for prod in Product %}
                                 <div class="product-title">
-                                    <a href="{{prod.title}}"></a>
+                                    <a href="#">Producto</a>
                                     <div class="ratting">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -183,7 +182,8 @@
                                     </div>
                                 </div>
                                 <div class="product-image">
-                                    <a href="{{ prod.get_absolute_url }}"><img src="{{ prod.img.url }}" class="img-fluid" alt="Product Image">
+                                    <a href="{% url 'productDet' %}">
+                                        <img src="{% static 'venta/img/product-1.jpg'%}" alt="Product Image">
                                     </a>
                                     <div class="product-action">
                                         <a href="#"><i class="fa fa-cart-plus"></i></a>
@@ -192,11 +192,10 @@
                                     </div>
                                 </div>
                                 <div class="product-price">
-                                    <h4><span>$</span>{{prod.price}}</h4>
+                                    <h3><span>$</span>990</h3>
                                     <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Comprar</a>
                                 </div>
                             </div>
-                            {% endfor %}
                         </div>
                         <div class="col-md-4">
                             <div class="product-item">
