--- a/venta/templates/venta/index.html
+++ b/venta/templates/venta/index.html
@@ -76,6 +76,7 @@
                             <div class="dropdown-menu">
                                 <a href="{% url 'login' %}" class="dropdown-item">Acceso</a>
                                 <a href="{% url 'login' %}" class="dropdown-item">Registro</a>
+                                <a href="{% url 'admin' %}" class="dropdown-item">Administración</a>
                             </div>
                         </div>
                     </div>
