--- a/venta/templates/venta/contact.html
+++ b/venta/templates/venta/contact.html
@@ -76,7 +76,7 @@
                             <div class="dropdown-menu">
                                 <a href="{% url 'login' %}" class="dropdown-item">Acceso</a>
                                 <a href="{% url 'login' %}" class="dropdown-item">Registro</a>
-                                <a href="{% url 'vista-admin' %}" class="dropdown-item">Administración</a>
+                                <a href="{% url 'viewAdmin' %}" class="dropdown-item">Administración</a>
                             </div>
                         </div>
                     </div>
