--- a/venta/templates/venta/ven_mod_product.html
+++ b/venta/templates/venta/ven_mod_product.html
@@ -93,8 +93,9 @@
         </div>
     </div>
     <!-- Bottom Bar End -->
+
     <div class="row">
-        <form method="post" action="" id="formulario">
+        <form method="post" action="" id="venta">
             {% csrf_token %}
 
             <div class="form_group">
