--- a/venta/templates/venta/ven_product.html
+++ b/venta/templates/venta/ven_product.html
@@ -95,7 +95,7 @@
     <!-- Bottom Bar End -->
 
     <div class="row">
-        <form method="post" action="" id="formulario">
+        <form method="post" action="" id="venta">
             {% csrf_token %}
 
             <div class="form_group">
