--- a/venta/templates/venta/vista-admin.html
+++ b/venta/templates/venta/vista-admin.html
@@ -125,6 +125,9 @@
         <div>
             <a class="mas" href="{% url 'ven_Product' %}">+</a>
         </div>
+        <div>
+            <a href="{% url 'lista_productos' %}">API</a>
+        </div>
     </section>
 
 
