--- a/venta/templates/venta/vista-admin.html
+++ b/venta/templates/venta/vista-admin.html
@@ -102,6 +102,8 @@
                 <th>Imagen</th>
                 <th>Precio</th>
                 <th>Descripción</th>
+                <th>categoria</th>
+
                 <th scope="col">Modificar</th>
                 <th scope="col">Eliminar</th>
             </tr>
@@ -112,12 +114,17 @@
                 <td>{{prod.image}}</td>
                 <td>{{prod.price}}</td>
                 <td>{{prod.descritption}}</td>
-                <td>
-                    <a href="{% url 'ven_mod_product' prod.idProducto %}"><img src="{% static 'venta/img/modificar.png' %}" alt=""></a>
-                </td>
-                <td>
-                    <a href="{% url 'ven_del_product' prod.idProducto %}"><img src="{% static 'venta/img/borrar.png' %}" alt=""></a>
-                </td>
+                <td>{{prod.categoria}}
+                    <td>
+                        <a href="{% url 'ven_mod_product' prod.idProducto %}">
+                            <img src="{% static 'venta/img/modificar.png' %}" alt="">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'ven_del_product' prod.idProducto %}">
+                            <img src="{% static 'venta/img/borrar.png' %}" alt="">
+                        </a>
+                    </td>
             </tr>
             {% endfor %}
 
@@ -129,27 +136,31 @@
         <div>
             <a href="{% url 'lista_productos' %}">API</a>
         </div>
-        <div>
-            <h3>Lista de la API</h3>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <h4>Lista de la API</h4>
+                </div>
+                <div class="col-md-6"><button type="button" id="buscarProductos">Buscador</button></div>
+                <div class="col-md-6">
+                    <p id="fecha"></p>
+                </div>
+            </div>
         </div>
-        <div><button type="button" id="buscarProductos">Buscar</button></div>
-        <div>
-            <br>
-            <p id="fecha"></p><br>
-        </div>
+
         <div class="row">
             <table class="table" id="productos">
                 <thead>
                     <tr>
+                        <th scope="col">ID</th>
                         <th scope="col">Nombre</th>
+                        <th scope="col">Imagen</th>
                         <th scope="col">Precio</th>
+                        <th scope="col">Descripcion</th>
                         <th scope="col">Categoría</th>
                     </tr>
                 </thead>
-                <tbody>
-
-                </tbody>
-
             </table>
         </div>
     </section>
